--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "autoprefixer": "latest",
+    "drizzle-kit": "^0.19.13",
     "nuxt": "^3.7.3",
     "postcss": "latest",
     "primeicons": "^6.0.1",
@@ -19,6 +20,8 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
+    "@vercel/postgres": "^0.5.0",
+    "drizzle-orm": "^0.28.6",
     "primevue": "^3.34.1"
   }
 }
