worked on login ui and database

--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --dotenv .env.development.local",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "db:init": "drizzle-kit generate:pg --schema=./db/schema.ts"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
